<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#80000000"
        android:text="@string/rating_title" />

    <RadioGroup
        android:id="@+id/ratingRadioGroup"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <RadioButton
            android:id="@+id/ratingPositiveRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_positive"/>

        <RadioButton
            android:id="@+id/ratingNegativeRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_negative"/>

        <RadioButton
            android:id="@+id/ratingNeutralRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_neutral"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#80000000"
        android:layout_marginTop="18dp"
        android:text="@string/rating_more" />

    <EditText
        android:id="@+id/ratingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="18sp"
        android:textColor="#000000"
        android:hint="@string/ratingTextHint"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:lines="3"
        android:maxLines="5"
        android:maxLength="200"/>

</LinearLayout>
